Crisis Response App/objects/IDReader__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Image_Classification_Model_Id__c</fullName>
        <description>Einstein.ai id of the Image Classification model to use</description>
        <label>Image Classification Model Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Model_Id__c</fullName>
        <defaultValue>&quot;OCRModel&quot;</defaultValue>
        <description>Einstein.ai ID of the OCR Model to use.</description>
        <label>OCR Model Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OcrParsingClass__c</fullName>
        <description>The name of the class that implements the OcrParserInterface that will perform the business logic required to map the text discovered by OCR to the Contact fields</description>
        <label>OcrParsingClass</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Image_Classification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if you want to use an Einstein Image Classification model to predict the type of ID</description>
        <label>Use Image Classification</label>
        <type>Checkbox</type>
    </fields>
    <label>IDReader</label>
</CustomObject>